--- a/mileston1.css
+++ b/mileston1.css
@@ -26,4 +26,24 @@ width: 160px;
     justify-content: space-around;
     align-items: center;
     padding: 50px;
+    color: #444343;
+}
+section h3{
+    font-size: 40px;
+    color: #151414;
+}
+.area2{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 100px;
+}
+.area3{
+    height: 300px;
+    background-image: url("new-year-new-me/images/watch.png");
+    background-repeat: no-repeat;
+    margin: 150px;
+    padding: 50px;
+    display: block;
+    align-items: center;
+    border-radius: 15px;
 }
